fix white space

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -16,7 +16,7 @@
   scroll-behavior: smooth;
 }
 
-body { padding: 5rem 1rem 3rem; }
+body { padding: 13vw 3vw 3rem; }
 
 header {
   z-index: 100; // above vimeo iframes
@@ -24,8 +24,8 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 4rem;
-  padding-top: 1rem;
+  height: 9vw;
+  padding-top: 1.25rem;
 
   display: flex;
   justify-content: space-around;
@@ -82,16 +82,15 @@ footer {
 }
 
 @media (min-width: 600px) {
-  body { padding-top: 8rem; }
+  body { padding-top: 12vw; }
 
   header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 2rem 2rem 0;
+    padding: 4vw 3vw 0;
   }
 
   main.project-list {
-    padding: 3vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5vw 8vw;
